[gd_scene load_steps=3 format=3 uid="uid://dmb5i6rmsrgme"]

[ext_resource type="Script" uid="uid://d2esypuhbkp8d" path="res://Systems/Spell System/Spell_Slot.gd" id="1_3ei28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1m28"]
size = Vector2(203, 203)

[node name="Spell_Slot" type="Node2D"]
script = ExtResource("1_3ei28")

[node name="Slot_Color" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.5183813, 0.42700657, 0.5606931, 1)

[node name="Slot_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot_Area"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_m1m28")
